@@ -1,3 +1,6 @@
+2011-04-11
+ Support files and revisions with -review in fossil.
+
 2011-04-05
  Added -pluginlist option.
  Added Paste Patch command in Tools.
